force-app/main/default/objects/ICF_Claim_Approve__c/ICF_Claim_Approve__c.object-meta.xml
<CustomObject>
    <description>Temp ICF claim approve AHS</description>
    <label>ICF Claim Approve</label>
    <nameField>
        <label>ICF Claim Approve Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICF Claims Approve</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>