force-app/main/default/objects/ICF_Claim_Approve__c/fields/Approve_Date__c.field-meta.xml
<CustomField>
    <fullName>Approve_Date__c</fullName>
    <label>Approve Date</label>
    <type>Date</type>
</CustomField>