force-app/main/default/objects/ICF_Claim_Approve__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <label>Claim Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>