force-app/main/default/objects/ICF_Claim_Approve__c/fields/Claim_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status_Code__c</fullName>
    <label>Claim Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>