force-app/main/default/objects/ICF_Claim_Approve__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Claim_Number__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Nama_Rumah_Sakit__c</columns>
    <columns>Proceed_ICF__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>